Suprimir override